[package]
name = "also_sync"
edition = "2021"
version = "0.1.0"

[lib]

[features]
default = ["tokio"]
tokio = ["dep:tokio", "also_sync_macros/tokio"]

[dependencies]
also_sync_macros = { path = "./also_sync_macros/", version = "0.1.0" }
lazy_static = "1.4.0"
tokio = { version = "1.36.0", features = ["full"], optional = true }

[dev-dependencies]
reqwest = "0.11"
async-dns = "0.1.0"

[workspace]
members = [
	"also_sync_macros",
]
