[package]
name = "also_sync_macros"
version = "0.1.0"
edition = "2021"
authors = ["Julian Büttner <git@julianbuettner.dev>"]
license = "MIT"
repository = "https://github.com/julianbuettner/also-sync"
readme = "README.md"
description = "Macros to automatically wrap async functions as sync"

[lib]
proc-macro = true

[features]
default = ["tokio"]
tokio = []

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"]}
proc-macro2 = "1"
quote = "1"
